--- a/css/styles.css
+++ b/css/styles.css
@@ -11101,6 +11101,20 @@ html {
   font-size: 3em;
   margin: 0 .2em 0 0;
 }
+
+.p-glossario{
+  color:#000;
+  text-align: center;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: large;
+}
+.p-final{
+  color:#000;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: xx-large;
+}
+
 .description{
   background-color: var(--bs-gray-dark);
   width: 100%;
