--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 /*!
 * Start Bootstrap - Freelancer v7.0.3 (https://startbootstrap.com/theme/freelancer)
 * Copyright 2013-2021 Start Bootstrap
@@ -2991,6 +2992,12 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #1abc9c;
   border-color: #1abc9c;
+}
+
+.parr{
+  color: white;
+  font-family: 'Josefin Sans';
+  text-align: center;
 }
 
 .btn-secondary {
