--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,11 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.logol{
+  position: relative;
+  width: 100%;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -634,6 +639,9 @@ progress {
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1320px;
+  }
+  .logol{
+    width: 120%;
   }
 }
 .row {
