--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
 /*!
 * Start Bootstrap - Freelancer v7.0.3 (https://startbootstrap.com/theme/freelancer)
 * Copyright 2013-2021 Start Bootstrap
@@ -665,6 +666,32 @@ progress {
   padding-right: calc(var(--bs-gutter-x) * .5);
   padding-left: calc(var(--bs-gutter-x) * .5);
   margin-top: var(--bs-gutter-y);
+}
+
+.rowform{
+  width: 100%;
+  background: #fff;
+  border-radius: 5px;
+  font-family: 'Poppins';
+}
+
+.titulo{
+  color: #000;
+  padding-top: 3%;
+  font-weight: 400;
+  font-family: 'Poppins';
+}
+
+.tituloproj{
+  text-align: center;
+  font-family: 'Poppins';
+  font-weight: 300;
+}
+
+.nomes{
+  font-family: 'Poppins';
+  font-weight: 400;
+  margin: 20px 0;
 }
 
 .col {
@@ -2171,6 +2198,24 @@ progress {
   color: #6c757d;
 }
 
+form .button{
+  height: 45px;
+  margin: 45px 0;
+}
+
+form .button input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  color: #fff;
+  border: none;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  border-radius: 2px;
+  background: linear-gradient(135deg, #274aad, #9ec75e);
+}
+
 .form-control {
   display: block;
   width: 100%;
@@ -2181,7 +2226,7 @@ progress {
   color: #212529;
   background-color: #fff;
   background-clip: padding-box;
-  border: 0.125rem solid #ced4da;
+  border: 1px solid #ccc;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -11130,7 +11175,7 @@ html {
 .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #2c3e50;
+  background-color: #293C57;
   color: #fff;
 }
 
