--- a/css/styles.css
+++ b/css/styles.css
@@ -2205,7 +2205,7 @@ form .button{
 
 form .button input{
   height: 100%;
-  width: 100%;
+  width: 90%;
   outline: none;
   color: #fff;
   border: none;
@@ -5718,6 +5718,282 @@ textarea.form-control-lg {
   text-align: center;
   background-color: #000;
   border-radius: 0.5rem;
+}  
+
+.contai{
+  position: relative;
+  min-width: 1100px;
+  min-height: 550px;
+  display: flex;
+  z-index: 1000;
+}
+
+.contai .contactInfo{
+  position: absolute;
+  top: 40px;
+  width: 350px;
+  height: calc(100% - 80px);
+  background: #095a55;
+  z-index: 1;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 20px 25px rgba(0,0,0,0.15);
+}
+
+.contai .contactInfo h2{
+  color: #fff;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.contai .contactInfo ul.info{
+  position: relative;
+  margin: 20px 0;
+}
+
+.contai .contactInfo ul.info li{
+  position: relative;
+  list-style: none;
+  display: flex;
+  margin: 20px 0;
+  cursor: pointer;
+  align-items: flex-start;
+}
+
+.noc{
+  text-align: left;
+}
+
+.tit{
+  font-family: 'Poppins';
+  text-align: left;
+}
+
+.contai .contactForm h2{
+  color: #0f3959;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.contai .contactForm .formBox{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 30px;
+}
+
+.contai .contactForm .formBox .inputBox{
+  position: relative;
+  margin-bottom: 35px;
+}
+
+.contai .contactForm .formBox .inputBox.w50{
+  width: 47%;
+}
+
+.contai .contactForm .formBox .inputBox.w100{
+  width: 100%;
+}
+
+.contai .contactForm .formBox .inputBox input,
+.contai .contactForm .formBox .inputBox textarea
+{
+  width: 100%;
+  resize: none;
+  padding: 5px 0;
+  font-size: 18px;
+  font-weight: 300;
+  color: #333;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #777;
+}
+
+.contai .contactForm .formBox .inputBox textarea{
+  height: 120px;
+}
+
+.contai .contactForm .formBox .inputBox span{
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  color: #000;
+  pointer-events: none;
+  font-size: 18px;
+  font-weight: 300;
+  transition: 0.3s;
+  font-family: 'Poppins';
+}
+
+.contai .contactForm .formBox .inputBox input:focus ~ span,
+.contai .contactForm .formBox .inputBox input:valid ~ span,
+.contai .contactForm .formBox .inputBox textarea:focus ~ span,
+.contai .contactForm .formBox .inputBox textarea:valid ~ span
+{
+  transform: translateY(-20px);
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: #095a55;
+  font-weight: 500;
+}
+
+.contai .contactForm .formBox .inputBox input[type="submit"]
+{
+  position: relative;
+  cursor: pointer;
+  background: #095a55;
+  color: #fff;
+  border: none;
+  max-width: 150px;
+  padding: 12px;
+}
+
+.contai .contactForm .formBox .inputBox input[type="submit"]:hover
+{
+  background: #0d948b;
+}
+
+@media (max-width : 1200px)
+{
+  .contai{
+    width: 90%;
+    min-width: auto;
+    margin: 20px;
+    box-shadow: 0 20px 50px rgba(0,0,0,0.2);
+  }
+  .contai .contactInfo
+  {
+    top: 0;
+    height: 550px;
+    position: relative;
+    box-shadow: none;
+  }
+  .contai .contactForm{
+    position: relative;
+    width: calc(100% - 35px);
+    padding-left: 0;
+    margin-left: 0;
+    padding: 40px;
+    height: 550px;
+    box-shadow: none;
+  }
+}
+
+@media (max-width : 991px){
+  .secform{
+    background: #fff38e;
+  }
+  .secform::before{
+    display: none;
+  }
+  .contai{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .contai .contactForm{
+    width: 100%;
+    height: auto;
+  }
+  .contai .contactInfo{
+    width: 100%;
+    height: auto;
+    flex-direction: row;
+  }
+  .contai .contactInfo ul.sci{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media(max-width : 600px)
+{
+  .contai .contactForm{
+    padding: 25px;
+  }
+  .contai .contactInfo{
+    padding: 25px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .contai .contactInfo ul.sci{
+    margin-top: 40px;
+  }
+  .contai .contactForm .formBox .inputBox.w50 {
+    width: 100%;
+  }
+}
+
+.contai .contactInfo ul.info li span:nth-child(1){
+  width: 30px;
+  min-width: 30px;
+}
+
+.contai .contactInfo ul.info li span:nth-child(1) img{
+  max-width: 100%;
+  filter: invert(1);
+}
+
+.contai .contactInfo ul.info li span:nth-child(2){
+  color: #fff;
+  margin-left: 10px;
+  font-weight: 300;
+}
+
+.contai .contactInfo ul.sci{
+  position: relative;
+  display: flex;
+}
+
+.contai .contactInfo ul.sci li{
+  list-style: none;
+  margin-right: 15px; 
+}
+
+.contai .contactInfo ul.sci li a{
+  text-decoration: none;
+}
+
+.contai .contactInfo ul.sci li a img{
+  filter: invert(1);
+}
+
+
+.contai .contactForm{
+  position: absolute;
+  padding: 70px 50px;
+  padding-left: 250px;
+  margin-left: 150px;
+  width: calc(100% - 150px);
+  height: 100%;
+  background: #fff;
+  box-shadow: 0 50px 50px rgba(0,0,0,0.25);
+  border-radius: 6px;
+}
+
+.secform
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #095a55;
+}
+
+.secform::before
+{
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: #fff38e;
 }
 
 .popover {
