--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -12,6 +12,12 @@ html{
     font-size: 10px;
 }
 
+body
+{
+    overflow-y: hidden; /* Hide vertical scrollbar */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
 section{
     width: 100%;
     height: 100vh;
@@ -32,6 +38,7 @@ h1{
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 5rem 10rem;
+    border-radius: 15px;
 }
 
 h2{
@@ -70,5 +77,56 @@ h2 a
     }
     100%{
         background-position: 0 50%;
+    }
+}
+
+@media (max-width : 1200px)
+{
+    h1
+    {
+        width: 90%;
+        min-width: auto;
+        text-align: center;
+    }
+}
+
+@media (max-width : 991px)
+{
+    h1
+    {
+        text-align: center;
+    }
+}
+
+@media (max-width : 600px)
+{
+    h1
+    {
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        display: flex;
+    }
+}
+
+@media (max-width : 339px)
+{
+    h1
+    {
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        display: flex;
+        font-size: 4rem;
+    }
+}
+
+@media (max-width : 289px)
+{
+    h1
+    {
+        font-size: 3.5rem;
     }
 }
